<resources>
    <string name="app_name">electricity manager</string>
    <string name="user_name">User Name</string>
    <string name="yyyymm">YYYYMM</string>
    <string name="address">Address</string>
    <string name="used_num_electric">Used Num electric</string>
    <string name="id_user">ID user</string>
    <string name="add_user">Add user</string>
    <string name="view_all_user">View all user</string>
    <string name="select_electric_user_type"/>
    <string name="menu">Menu</string>
    <string name="enter_name">Enter Name</string>
    <string name="date">Date</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_used_electric_number">Enter Used Electric Number</string>
    <string name="electric_user_type_name">Electric User Type Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="ebm">EBM</string>
    <string name="todo">TODO</string>
    <string name="list_of_customers">List of Customers</string>
    <string name="customer">Customer</string>
    <string name="electric_index">Electric Index</string>
    <string name="Enter_unit_price">Enter the unit price increase amount $</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="btnIncreasePrice">Increase unit price of electricity</string>
    <string name="btnDecreasePrice">Decrease unit price of electricity</string>
    <string name="btnAddCustomer">Add Customer</string>
    <string name="tvunit_price">Unit Price</string>
    <string name="Edt_used_elec_num">Enter Used Electric Number</string>
    <string name="tvElec_use_name">Electric User Type Name</string>
    <string name="Edt_Name">Enter Name</string>
    <string name="Edt_Date">Date</string>
    <string name="Edt_Address">Enter Address</string>
    <string name="tv_Search_customer">Search for customer by Name or Address</string>
    <string name="Edt_keyword">Enter the keyword</string>
    <string name="btn_Search">Search</string>
    <string name="show_address">Show Address</string>
    <string name="show_used_number_of_electric">Show Used Number of Electric</string>
    <string name="show_electric_user_type">Show Electric User Type</string>
    <string name="show_price">Show Price</string>
    <string name="customer_name">Customer Name</string>
    <string name="dob">DOB</string>
    <string name="tv_elec_num">Electric Num</string>
    <string name="tv_Elec_type">Electric Type</string>
    <string name="tv_Unit_price">Unit Price</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string-array name="search_by_options">
        <item>NAME</item>
        <item>ADDRESS</item>
    </string-array>
</resources>